chore: flarum-cli audit infra --fix

--- a/composer.json
+++ b/composer.json
@@ -37,6 +37,23 @@
                 "backgroundColor": "#D3241C",
                 "color": "#fff"
             }
+        },
+        "flarum-cli": {
+            "modules": {
+                "admin": false,
+                "forum": true,
+                "js": true,
+                "jsCommon": false,
+                "css": true,
+                "gitConf": true,
+                "githubActions": true,
+                "prettier": true,
+                "typescript": false,
+                "bundlewatch": false,
+                "backendTesting": false,
+                "editorConfig": true,
+                "styleci": true
+            }
         }
     }
 }
