--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -2,13 +2,9 @@ name: Signup Button PHP
 
 on: [workflow_dispatch, push, pull_request]
 
-# The reusable workflow definitions will be moved to the `flarum/framework` repo soon.
-# This will break your current script.
-# When this happens, run `flarum-cli audit infra --fix` to update your infrastructure.
-
 jobs:
   run:
-    uses: flarum/framework/.github/workflows/REUSABLE_backend.yml@main
+    uses: flarum/framework/.github/workflows/REUSABLE_backend.yml@2.x
     with:
       enable_backend_testing: false
 
