--- a/.github/workflows/frontend.yml
+++ b/.github/workflows/frontend.yml
@@ -2,17 +2,15 @@ name: Signup Button JS
 
 on: [workflow_dispatch, push, pull_request]
 
-# The reusable workflow definitions will be moved to the `flarum/framework` repo soon.
-# This will break your current script.
-# When this happens, run `flarum-cli audit infra --fix` to update your infrastructure.
-
 jobs:
   run:
-    uses: flarum/framework/.github/workflows/REUSABLE_frontend.yml@main
+    uses: flarum/framework/.github/workflows/REUSABLE_frontend.yml@2.x
     with:
       enable_bundlewatch: false
       enable_prettier: true
       enable_typescript: false
+      js_package_manager: npm
+      node_version: 18
 
       frontend_directory: ./js
       main_git_branch: master
