--- a/js/package.json
+++ b/js/package.json
@@ -4,7 +4,7 @@
     "prettier": "@flarum/prettier-config",
     "devDependencies": {
         "prettier": "^2.5.1",
-        "flarum-webpack-config": "^2.0.0",
+        "flarum-webpack-config": "^3.0.0",
         "webpack": "^5.94.0",
         "webpack-cli": "^4.9.1",
         "@flarum/prettier-config": "^1.0.0"
@@ -14,6 +14,6 @@
         "build": "webpack --mode production",
         "format": "prettier --write src",
         "format-check": "prettier --check src",
-        "analyze": "cross-env ANALYZER=true yarn build"
+        "analyze": "cross-env ANALYZER=true npm run build"
     }
 }
